Removed list completely (obsolete), fixed breakpoint bug with audio form, fixed dragging on loop mode for carousel, fixed swiping on mobile (should work as expected), changed grid gutter color, minor adjustment to audio player, fixed bug with grid where resize allowed elements to be smaller than they should be

--- a/frontend/css/documentation.css
+++ b/frontend/css/documentation.css
@@ -129,7 +129,7 @@ p {
 	border-radius: 4px;
 }
 .download i {
-	margin: auto 0 auto 0;
+	margin: auto 10px auto 0;
 }
 .options-list {
 	list-style: disc;
@@ -161,6 +161,7 @@ p {
 	border: 1px solid black;
 	margin-left: 20px;
 	margin-right: 20px;
+	padding: 10px;
 }
 .method-container > * {
 	font-family: 'Ubuntu', sans-serif !important;
